Añadida sección de productos.

--- a/products.html
+++ b/products.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="./header/css/index.css" />
     <link rel="stylesheet" href="./footer/css/index.css" />
 
-    <link rel="stylesheet" href="./home/css/index.css" />
+    <link rel="stylesheet" href="./product/css/index.css" />
 
     <script type="module" src="./header/js/index.js"></script>
+    <script type="module" src="./product/js/index.js"></script>
   </head>
   <body>
     <header class="header">
@@ -28,24 +29,30 @@
     <div class="fixer--header"></div>
 
     <section class="title title--home">
-      <h1>NOSOTROS SOMOS COCA-COLA COMPANY</h1>
+      <h1>CERCA DE LAS PERSONAS EN CADA MOMENTO Y LUGAR</h1>
     </section>
 
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
+    <h3 class="line separator subtitle">Portafolio</h3>
+
+    <div id="list-root">
+      <!-- Sección de generación dinámica con javascript -->
+    </div>
+
+    <div class="information--product separator">
+      <div>
+        <div class="counter--information">
+          <h1>132</h1>
+          <p>años refrescando al mundo</p>
+        </div>
+        <div class="counter--information">
+          <h1>200+</h1>
+          <p>países disfrutan de nuestros productos</p>
+        </div>
+      </div>
+      <div class="image--information">
+        <img src="/home/images/coca1.jpg" />
+      </div>
+    </div>
 
     <footer class="footer">
       <div class="logobig">
