Añadida sección de contacto.

--- a/organization.html
+++ b/organization.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./header/css/index.css" />
     <link rel="stylesheet" href="./footer/css/index.css" />
 
-    <link rel="stylesheet" href="./home/css/index.css" />
+    <link rel="stylesheet" href="./organization/css/index.css" />
 
     <script type="module" src="./header/js/index.js"></script>
   </head>
@@ -27,25 +27,109 @@
     </header>
     <div class="fixer--header"></div>
 
-    <section class="title title--home">
+    <section class="title title--organization">
       <h1>NOSOTROS SOMOS COCA-COLA COMPANY</h1>
     </section>
 
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
+    <section class="description--organization">
+      <h1><p>
+        En 1886, el Dr. John Pemberton sirvió la primera Coca-Cola en el mundo.
+        Desde entonces, no hemos dejado de sorprenderte.
+      </p></h1>
+      
+      <div>
+        <div>
+          <p class="triline">
+            Acompañamos durante años los momentos más importantes de nuestros
+            consumidores, un trabajo por un mundo mejor.
+          </p>
+          
+          <p class="triline">
+            Nuestro compromiso es refrescar al mundo y hacer la diferencia. Un
+            conjunto de acciones enfocadas a lograr Un Mundo Sin Residuos
+          </p>
+        </div>
+        <div>
+          <img src="/organization/images/coca1.jpg" alt="Imagen de coca cola sujetada en una mano." />
+  
+          <p class="triline">
+            Actualmente contamos con 83 marcas en 13 categorías;
+            en la última década hemos reducido en 21% el contenido calórico
+            de nuestro portafolio.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <div class="two--grid grid--organization">
+      <div class="grid-image--organization" style="background-image: url(/organization/images/coca2.jpg);"><!-- <img src="/organization/images/coca2.jpg" alt="Conductor de piel morena y camisa blanca en camión de coca cola." /> --></div>
+      <div class="triline">
+        <h2>¿Quiénes somos?</h2>
+
+        <p>Coca-Cola es la mayor compañía de bebidas del mundo.
+        A través de 500 marcas de bebidas con y sin gas, y del sistema
+        de distribución de bebidas más grande del mundo, consumidores
+        de más de 200 países disfrutan de casi 1.600 consumaciones
+        al día</p>
+      </div>
+      <div class="triline">
+        <h2>Nuestros valores</h2>
+
+        <p>
+          Nuestros valores actúan como una brújula que guía nuestras
+          acciones y describe nuestro comportamiento en el mundo.
+
+          <ul>
+            <li><p>Liderazgo: La valentía de moldear un futuro mejor</p></li>
+            <li><p>Colaboración: El apalancamiento en el genio colectivo</p></li>
+            <li><p>Integridad: Ser real</p></li>
+            <li><p>Responsabilidad: Si ha de ser, depende de mí</p></li>
+            <li><p>Pasión: Comprometidos en corazón y mente</p></li>
+            <li><p>Diversidad: Tan inclusivos como nuestras marcas</p></li>
+            <li><p>Calidad: Lo que hacemos, lo hacemos bien</p></li>
+          </ul>          
+        </p>
+      </div>
+      <div class="grid-image--organization" style="background-image: url(/organization/images/coca3.jpg);"><!-- <img src="/organization/images/coca3.jpg" alt="Vitrina con bordes laterales circulares que contiene dentro productos de coca cola." /> --></div>
+      <div class="grid-image--organization" style="background-image: url(/organization/images/coca4.jpg);"><!-- <img src="/organization/images/coca4.jpg" alt="Dos recipientes de coca cola sin azucar, una vacío y otro lleno." /> --></div>
+      <div class="triline">
+        <h2>Misión</h2>
+
+        <p>
+          Nuestro plan de trabajo comienza con nuestra misión, que es
+          perdurable y expresa nuestro propósito como compañía. Sirve
+          como el patrón sobre el cual ponderamos nuestras acciones y
+          decisiones.
+
+          <ul>
+            <li><p>Refrescar al mundo.</p></li>
+            <li><p>Inspirar momentos de optimismo y felicidad.</p></li>
+            <li><p>Crear valor y hacer la diferencia.</p></li>
+          </ul>
+        </p>
+      </div>
+      <div class="triline">
+        <h2>Visión</h2>
+
+        <p>
+          Nuestra visión actúa como el marco de nuestro plan de trabajo y
+          guía cada uno de los aspectos de nuestro negocio mediante la
+          descripción de lo que necesitamos lograr para continuar alcanzando
+          un crecimiento sostenible y de calidad.
+        </p>
+      </div>
+      <div class="grid-image--organization" style="background-image: url(/organization/images/coca5.jpg);"></div>
+      <div class="grid-image--organization" style="background-image: url(/organization/images/coca6.jpg);"></div>
+      <div class="triline">
+        <h2>Nuestro personal</h2>
+
+        <p>
+          Nuestro personal es agíl y eficaz, buscamos lo mejor, y no siempre
+          lo mejor es lo perfecto, tenemos ganas de trabajar y trabajo en
+          equipo.
+        </p>
+      </div>
+    </div>
 
     <footer class="footer">
       <div class="logobig">
