--- a/products.html
+++ b/products.html
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="image--information">
-        <img src="/home/images/coca1.jpg" />
+        <img src="/organization/images/coca1.jpg" />
       </div>
     </div>
 
