--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./header/css/index.css" />
     <link rel="stylesheet" href="./footer/css/index.css" />
 
-    <link rel="stylesheet" href="./home/css/index.css" />
+    <link rel="stylesheet" href="./organization/css/index.css" />
 
     <script type="module" src="./header/js/index.js"></script>
   </head>
@@ -31,70 +31,21 @@
       <h1>NOSOTROS SOMOS COCA-COLA COMPANY</h1>
     </section>
 
-    <section class="description--home">
-      <h1><p>
-        En 1886, el Dr. John Pemberton sirvió la primera Coca-Cola en el mundo.
-        Desde entonces, no hemos dejado de sorprenderte.
-      </p></h1>
-      
-      <div>
-        <div>
-          <p>
-            Acompañamos durante años los momentos más importantes de nuestros
-            consumidores, un trabajo por un mundo mejor.
-          </p>
-          
-          <p>
-            Nuestro compromiso es refrescar al mundo y hacer la diferencia. Un
-            conjunto de acciones enfocadas a lograr Un Mundo Sin Residuos
-          </p>
-        </div>
-        <div>
-          <img src="/home/images/coca1.jpg" alt="Imagen de coca cola sujetada en una mano." />
-  
-          <p>
-            Actualmente contamos con 83 marcas en 13 categorías;
-            en la última década hemos reducido en 21% el contenido calórico
-            de nuestro portafolio.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <div class="two--grid grid--home">
-      <img src="home/images/coca2.jpg" alt="Conductor de piel morena y camisa blanca en camión de coca cola." />
-      <div>
-        <h2>Crecemos de la mano de nuestras comunidades</h2>
-
-        <p>Por cada empleo que generamos, ayudamos a crear muchos más
-        en nuestra extensa cadena de valor:  operarios, almaceneros,
-        distibuidores y recicladores, entre otros.</p>
-      </div>
-      <div>
-        <h2>Infinidad de opciones para ti y los que más quieres</h2>
-
-        <p>Ofrecemos un amplio portafolio de bebidas, perfectas para seguir
-        refrescando al mundo y acompañar los momentos mas felices de
-        la vida</p>
-      </div>
-      <img src="home/images/coca3.jpg" alt="Vitrina con bordes laterales circulares que contiene dentro productos de coca cola." />
-      <img src="home/images/coca4.jpg" alt="Dos recipientes de coca cola sin azucar, una vacío y otro lleno." />
-      <div>
-        <h2>Por ecosistemas más sustentables en la región</h2>
-
-        <p>Adelantamos ambiciosos programas de sustentabilidad para contribuir
-        con un planeta más limpio y amigable para todos: conservación de
-        ecosistemas y acceso a agua potable a miles de ciudadanos.</p>
-      </div>
-      <div>
-        <h2>Creemos que vivir en Un Mundo sin Residuos es posible</h2>
-
-        <p>Estamos comprometidos a recuperar y reciclar para  2030 un empaque
-        por cada uno de los que ponemos en elmercado; una meta arriesgada
-        pero seguros de que juntos lo vamos a lograr</p>
-      </div>
-      <img src="home/images/coca5.jpg" alt="Botellas de plásticos desplazandose por una expendedora, trabajadores de azul con guantes verdes de fondo." />
-    </div>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
+    <p>Hola</p>
 
     <footer class="footer">
       <div class="logobig">
