--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./header/css/index.css" />
     <link rel="stylesheet" href="./footer/css/index.css" />
 
-    <link rel="stylesheet" href="./organization/css/index.css" />
+    <link rel="stylesheet" href="./home/css/index.css" />
 
     <script type="module" src="./header/js/index.js"></script>
   </head>
@@ -27,25 +27,106 @@
     </header>
     <div class="fixer--header"></div>
 
-    <section class="title title--home">
-      <h1>NOSOTROS SOMOS COCA-COLA COMPANY</h1>
+    <section class="description--home" style="background-image: url(/home/images/coca1.jpg);">
+      <div>
+        <h2>Coca cola company</h2>
+        <p>
+          La compañía de bebidas más grande del mundo, refrescando a
+          sus consumidores con más de 500 marcas de refrescos y bebidas
+          no-carbonatadas.
+        </p>
+      </div>
     </section>
 
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
-    <p>Hola</p>
+    <section class="values--home">
+      <div class="title--values triline">
+        <h2>Vivir nuestros valores</h2>
+        <p>
+          Nuestros valores actúan como una brújula que guía
+          nuestras acciones y describe nuestro comportamiento en el mundo.
+        </p>
+      </div>
+      <div class="cards--home" id="value1--home">
+        <div class="card--home">
+          <div class="icon--card">
+            <div class="icon"></div>
+          </div>
+          <div class="content--card">
+            <h3>Liderazgo</h3>
+            <p>La valentía de moldear un futuro mejor</p>
+          </div>
+        </div>
+
+        <div class="card--home" id="value2--home">
+          <div class="icon--card">
+            <div class="icon"></div>
+          </div>
+          <div class="content--card">
+            <h3>Colaboración</h3>
+            <p>El apalancamiento en el genio colectivo</p>
+          </div>
+        </div>
+        
+        <div class="card--home" id="value3--home">
+          <div class="icon--card">
+            <div class="icon"></div>
+          </div>
+          <div class="content--card">
+            <h3>Integridad</h3>
+            <p>Ser real</p>
+          </div>
+        </div>
+
+        <div class="card--home" id="value4--home">
+          <div class="icon--card">
+            <div class="icon"></div>
+          </div>
+          <div class="content--card">
+            <h3>Responsabilidad</h3>
+            <p>Si ha de ser, depende de mí</p>
+          </div>
+        </div>
+
+        <div class="card--home" id="value5--home">
+          <div class="icon--card">
+            <div class="icon"></div>
+          </div>
+          <div class="content--card">
+            <h3>Pasión</h3>
+            <p>Comprometidos en corazón y mente</p>
+          </div>
+        </div>
+
+        <div class="card--home" id="value6--home">
+          <div class="icon--card">
+            <div class="icon"></div>
+          </div>
+          <div class="content--card">
+            <h3>Diversidad</h3>
+            <p>Tan inclusivos como nuestras marcas</p>
+          </div>
+        </div>
+
+        <div class="card--home" id="value7--home">
+          <div class="icon--card">
+            <div class="icon"></div>
+          </div>
+          <div class="content--card">
+            <h3>Calidad</h3>
+            <p>Lo que hacemos, lo hacemos bien</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="product--home">
+      <div class="title--product">
+        <h2>Variedad de productos</h2>
+        <p>para variedades de gustos</p>
+        <a href="/products.html" class="more">Ver más</a>
+      </div>
+      <div class="image--product"></div>
+    </section>
 
     <footer class="footer">
       <div class="logobig">
