--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <footer class="footer">
       <div class="logobig">
         <img src="/header/images/logo.svg" alt="Logo de coca cola" />
-        <p>2021 The Coca-Cola Company. Todos los derechos reservados.</p>
+        <p>Página copia de coca cola con fines educativos, derechos reservados a José Joaquín Zambrano Centeno</p>
       </div>
       <div class="social">
         <a href="https://twitter.com/CocaColaLC" class="item--social twitter--social"></a>
